<resources>
    <string name="app_name">Gmapss</string>
    <string name="registro_de_proyectos">Registro de proyectos</string>
    <string name="funciones">Funciones</string>
    <string name="buscar_proyecto">Buscar proyecto.....</string>
    <string name="bienvenidos_a">Bienvenidos a</string>
    <string name="todo">TODO</string>
    <string name="gmap">Gmap</string>
    <string name="inicio">Inicio</string>
    <string name="buscar_proyectos">Buscar proyectos.......</string>
    <string name="distancias">Distancias</string>
    <string name="medidor">Medidor</string>
    <string name="Medidor" />
    <string name="boton_conversor">boton_conversor</string>
    <string name="boton_coordenas">boton_coordenas</string>
    <string name="boton_medidor">boton_medidor</string>
    <string name="boton_distancias">boton_distancias</string>
    <string name="boton_gps">boton_GPS</string>
    <string name="boton_inicio">boton_inicio</string>
    <string name="conversor">Conversor</string>
    <string name="gps">gps</string>
    <string name="Gps">GPS</string>
    <string name="imagedowlaod">imagedowlaod</string>
    <string name="descargar">Descargar</string>
    <string name="guide">GUide</string>
    <string name="guia">Guia</string>
    <string name="perfil">Perfil</string>
    <string name="perfiless">perfiless</string>
    <string name="buscar_ptoyecto">Buscar ptoyecto...</string>
    <string name="coordenadas">Coordenadas</string>
    <string name="ayuda">Ayuda</string>
    <string name="personal_particulars">Personal Particulars</string>
    <string name="username">USERNAME</string>
    <string name="start">Start</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in">SIGN IN</string>
    <string name="Username">Username</string>
    <string name="datos_personales">Datos personales</string>
    <string name="selecciona_tu_genero">Selecciona tu Genero</string>
</resources>