<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GmapsActivity">

    <View
        android:id="@+id/view"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="#3684FA" />

    <View
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignParentEnd="true"
        android:background="#3684FA" />

    <View
        android:id="@+id/encavez"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:background="@drawable/pricipal"
        android:backgroundTint="#3684FA" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="61dp"
        android:layout_marginTop="19dp"
        android:text="@string/bienvenidos_a"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="61dp"
        android:layout_marginTop="42dp"
        android:text="@string/gmap"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/explor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/botton1"
        android:text="@string/buscar_proyecto"
        android:textSize="16dp"
        android:textStyle="normal">

    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/fonds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/encavez"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="23dp"
        android:text="@string/funciones"
        android:textColor="@color/black"
        android:textSize="23dp"
        android:textStyle="bold"

        >

    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="#3684FA"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="#3684FA">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#3684FA"

                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/inicio"
                    android:contentDescription="@string/inicio" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/inicio"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="#3684FA">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#3684FA"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/descargardocumento" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descargar"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="#3684FA">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#3684FA"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/help_with_circle_svgrepo_com" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ayuda"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="#3684FA">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#3684FA"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/account_svgrepo_com" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perfil"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageButton
        android:id="@+id/botton_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fonds"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="38dp"
        android:background="@drawable/pricipal"
        android:contentDescription="@string/boton_medidor"
        app:cardCornerRadius="20dp"
        app:srcCompat="@mipmap/medidor_foreground">


    </ImageButton>

    <ImageButton
        android:id="@+id/lateizq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/botton_1"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="3dp"
        android:layout_toEndOf="@id/botton_1"
        android:background="@drawable/pricipal"
        android:contentDescription="@string/boton_conversor"
        app:cardCornerRadius="20dp"
        app:srcCompat="@mipmap/conversor_foreground">


    </ImageButton>

    <ImageButton
        android:id="@+id/latderecho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/botton_1"
        android:layout_marginEnd="23dp"
        android:layout_toStartOf="@+id/botton_1"
        android:background="@drawable/pricipal"
        android:contentDescription="@string/boton_distancias"
        app:cardCornerRadius="20dp"
        app:srcCompat="@mipmap/distancias_foreground">

    </ImageButton>

    <ImageButton
        android:id="@+id/late_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botton_1"
        android:layout_alignStart="@+id/latderecho"

        android:layout_marginStart="55dp"
        android:background="@drawable/pricipal"
        android:contentDescription="@string/boton_coordenas"
        app:srcCompat="@mipmap/coordenadas_foreground">


    </ImageButton>

    <ImageButton
        android:id="@+id/lateiz_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/botton_1"
        android:layout_alignEnd="@+id/lateizq"
        android:layout_marginEnd="55dp"
        android:background="@drawable/pricipal"
        android:contentDescription="@string/boton_gps"
        app:srcCompat="@mipmap/ic_launcher_foreground">

    </ImageButton>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/latderecho"
        android:layout_alignStart="@id/botton_1"
        android:layout_marginStart="23dp"
        android:text="@string/medidor"
        android:textSize="16dp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/latderecho"
        android:layout_alignStart="@+id/latderecho"
        android:layout_marginStart="22dp"
        android:text="@string/distancias"
        android:textSize="16dp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lateizq"
        android:layout_alignStart="@+id/lateizq"
        android:layout_marginStart="23dp"
        android:text="@string/conversor"
        android:textSize="16dp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/late_2"
        android:layout_alignStart="@id/late_2"
        android:layout_marginStart="8dp"
        android:text="@string/coordenadas"
        android:textSize="16dp"
        android:textStyle="bold"

        >

    </TextView>

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lateiz_2"
        android:layout_alignStart="@id/lateiz_2"
        android:layout_marginStart="42dp"
        android:text="@string/Gps"
        android:textSize="16dp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView24"
        android:layout_marginStart="15sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="165sp"
        android:text="@string/registro_de_proyectos"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:textStyle="bold|italic" />



</RelativeLayout>


